--- a/styles.css
+++ b/styles.css
@@ -1,55 +1,1 @@
-* {
-    margin-top: 50px;
-    margin-left: 240px;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    font-family: sans-serif; 
-    background-color: #f4f4f9; 
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-}
-
-/* Miejsce na style kalkulatora napiwków. */
-
-form {
-   margin-left: 200px;
-}
-
-#rachunek{
-    padding: 3px;
-    margin: 10px;
-    margin-left: 1px;
-    display: block;
-}
-
-#napiwek{
-    padding: 3px;
-    margin: 10px;
-    margin-left: 1px;
-    display: block;
-}
-
-#wyliczenie {
-    padding: 10px;
-    background-color: black;
-    color: white;
-    font-weight: bolder;
-    display: block;
-    margin-left: 1px;
-}
-
-#wynik{
-    display: block;
-    margin: 20px;
-    margin-left: 20px;
-}
-
-#wyliczenie:hover {
-    background-color: white;
-    color: black;
-    font-weight: bold;
-}
+@import "tailwindcss";
